# furniture_description

./: CMakeLists.txt  README.md  package.xml
bundles/: backbeam_tags_big.xml  backbeam_tags_small.xml  backrest_tags_big.xml  cushion_tags_big.xml  frontbeam_tags_big.xml  frontbeam_tags_small.xml  left_tags_big.xml  left_tags_middle.xml  left_tags_small.xml  right_tags_big.xml  right_tags_middle.xml  right_tags_small.xml  screw_driver_big.xml
bundles/old/: back_tags_11_and_10.xml  backrest_tags_8_and_9.xml  cushion_tags_5_and_3.xml  front_tags_13_and_14.xml  left_tags_15_and_16.xml
meshes/: backrest.STL  cushion.STL  frontbeam.STL  legs.STL
urdf/: ikea_chair.gv  ikea_chair_all_parts.urdf.xacro  ikea_chair_backrest.xacro  ikea_chair_cushion.xacro  ikea_chair_front_part.xacro  ikea_chair_oois.urdf.xacro  ikea_chair_side_part.xacro  materials.xacro  scene.xacro  screw_driver.xacro  ur5_joint_limited_robot.urdf.xacro
