<?xml version="1.0"?>
<package format="2">
  <name>furniture_description</name>
  <version>0.0.0</version>
  <description>Examples for assembly_guidence Task Constructor</description>

 <maintainer email="yeping@todo.todo">Robert Haschke</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>


  <export>
  </export>
</package>
